--- a/style.css
+++ b/style.css
@@ -141,7 +141,7 @@ h1, h2, h3, .h4, .h5 {
 .title-hero {
   font-size: 3rem;
   font-weight: 900;
-  background: linear-gradient(90deg, #412106, #dd7907, #5a2506);
+  background: linear-gradient(90deg, #86420a, #dd7907, #5a2506);
   -webkit-background-clip: text;
   -webkit-text-fill-color: transparent;
   text-shadow: 2px 2px 6px rgba(0,0,0,0.15);
